--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-    "name": "bootstrap-timepicker",
+    "name": "bootstrap-pw-timepicker",
     "description": "A timepicker component for Twitter Bootstrap",
-    "version": "0.5.2",
-    "main": "js/bootstrap-timepicker.js",
+    "version": "1.0.0",
+    "main": "js/bootstrap-pw-timepicker.js",
     "license": "MIT",
     "ignore": [
         "**/.*",
@@ -18,7 +18,7 @@
     ],
     "repository": {
       "type": "git",
-      "url": "https://github.com/jdewit/bootstrap-timepicker"
+      "url": "https://github.com/pancara/bootstrap-timepicker"
     },
     "dependencies": {
         "bootstrap": "^3.0",
