--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-	"name"        : "jdewit/bootstrap-timepicker",
+	"name"        : "pancara/bootstrap-timepicker",
 	"description" : "A simple timepicker component for Twitter Bootstrap.",
-	"version"     : "0.5.2",
+	"version"     : "0.5.3",
 	"license"     : "MIT",
 	"authors": [
 		{
-	    "name" : "Joris de Wit",
-	    "email" : "joris.w.dewit@gmail.com"
+	    "name" : "Pancara Kusuma Wijonarko",
+	    "email" : "pancara.k.wijonarko@gmail.com"
 		}
 	]
 
