--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Timepicker widget for Twitter Bootstrap",
   "version": "0.5.3",
   "license": "MIT",
-  "homepage": "http://jdewit.github.com/bootstrap-timepicker",
+  "homepage": "http://pancara.github.com/bootstrap-timepicker",
   "author": {
     "name": "Pancara Kusuma Wijonarko",
     "email": "pancara.k.wijonarko@gmail.com"
